--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,13 @@
   height: 100%;
 }
 
+.cassia {
+  background-image: url("cassia.jpeg");
+  background-color: #cccccc;
+  width: 100%;
+  height: 100%;
+}
+
 .center {
   display: flex;
   align-items: center;
