--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 }
 
 .cassia {
-  background-image: url("cassia.jpeg");
+  background-image: url("cassia.jpg");
   background-color: #cccccc;
   width: 100%;
   height: 100%;
