--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,13 @@
   height: 100%;
 }
 
+.auriel {
+  background-image: url("auriel.jpg");
+  background-color: #cccccc;
+  width: 100%;
+  height: 100%;
+}
+
 .center {
   display: flex;
   align-items: center;
