--- a/public/style.css
+++ b/public/style.css
@@ -14,9 +14,7 @@
 }
 
 .block {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
   width: 700px;
   height: 300px;
   background-color: #cccccc40;
@@ -31,6 +29,12 @@
   font-size: 24px;
   padding-bottom: 5px;
   margin-bottom: 5px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .input {
