--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,19 @@
-.intro {
-  background-image: url("intro.jpeg");
+body {
   background-color: #cccccc;
   width: 100%;
   height: 100%;
+}
+
+.intro {
+  background-image: url("intro.jpeg");
 }
 
 .cassia {
   background-image: url("cassia.jpg");
-  background-color: #cccccc;
-  width: 100%;
-  height: 100%;
 }
 
 .auriel {
   background-image: url("auriel.jpg");
-  background-color: #cccccc;
-  width: 100%;
-  height: 100%;
 }
 
 .center {
