--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,10 @@ body {
   background-image: url("intro.jpeg");
 }
 
+.ae {
+  background-image: url("ae.jpg");
+}
+
 .cassia {
   background-image: url("cassia.jpg");
 }
