ae test2 resized

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .ae {
-  background-image: url("ae.jpeg");
+  background-image: url("ae.jpg");
   background-color: #cccccc;
   width: 50%;
   height: 50%;
