--- a/public/style.css
+++ b/public/style.css
@@ -70,6 +70,17 @@ form {
   transition: 0.3s;
 }
 
+a.button {
+  font-size: 16px;
+  font-family: "Verdana", sans-serif;
+  height: 30px;
+  width: 180px;
+  padding: 0px;
+  margin: 0px;
+  padding-top: 8px;
+
+}
+
 .button:hover {
   background-color: #a36408;
 }
