--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,10 @@ body {
   background-image: url("intro.jpeg");
 }
 
+.fond {
+  background-image: url("test.jpg");
+}
+
 .ae {
   background-image: url("ae.jpg");
 }
@@ -39,12 +43,18 @@ body {
   height: 100%;
 }
 
+.pad-20 { padding: 20px;}
+
 .block {
   width: 700px;
   min-height: 180px;
   background-color: #cccccc40;
   margin-bottom: 250px;
   text-align: center;
+}
+
+.dark-block {
+  background-color: #10101050;
 }
 
 .block p {
@@ -60,6 +70,10 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+iframe {
+  border: 0px;
 }
 
 .input {
@@ -94,17 +108,11 @@ a.button {
   padding-top: 8px;
 }
 
-.button:hover {
-  background-color: #a36408;
-}
-
-.btn-grey {
-  background-color: #3A4E68;
-}
-
-.btn-grey:hover {
-  background-color: #283648;
-}
+.button:hover { background-color: #a36408; }
+.btn-grey { background-color: #3A4E68; }
+.btn-grey:hover { background-color: #283648; }
+.btn-blue { background-color: #1e3b65; }
+.btn-blue:hover { background-color: #132847; }
 
 
 .btn-ae {
