--- a/public/style.css
+++ b/public/style.css
@@ -60,6 +60,11 @@ body {
   background-color: #fafafa;
 }
 
+h1 {
+  font-size: 45px;
+  font-family: monospace;
+}
+
 .reward1 {
   background-image: url("reward1.jpg");
 }
